[package]
name = "gm82save"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["smooth_progress_bar"]
smooth_progress_bar = ["crossbeam-channel"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[build-dependencies]
time = "0.3"

[dependencies]
byteorder = "1.4.3"
crossbeam-channel = { version = "0.5", optional = true }
ctor = "0.2.0"
flate2 = { version = "1.0", default-features = false, features = ["zlib-ng-compat"] }
itertools = "0.10"
lazy_static = "1.4.0"
notify = { git = "https://github.com/skyfloogle/notify.git", branch = "update-windows-sys" }
once_cell = "1.10.0"
parking_lot = { git = "https://github.com/Amanieu/parking_lot.git", branch = "master" }
png = "0.17"
rayon = "1.5"
regex = { version = "1.5.5", default-features = false, features = ["std"] }
sysinfo = "0.28.4"
time = "0.3"
unicase = "2.6"
