[package]
name = "gm82save"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["smooth_progress_bar"]
smooth_progress_bar = ["crossbeam-channel"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[build-dependencies]
time = "0.3"

[dependencies]
byteorder = "1.5"
crossbeam-channel = { version = "0.5", optional = true }
ctor = "0.4"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
itertools = "0.14"
lazy_static = "1.5"
notify = "8.0"
once_cell = "1.21"
parking_lot = "0.12.3"
png = "0.17"
rayon = "1.10"
regex = { version = "1.11", default-features = false, features = ["std"] }
sysinfo = "0.33"
time = "0.3"
unicase = "2.8"
